# regexp-parser

./: CMakeLists.txt  README.md
src/: applier.h  main.cpp  parser.h
tests/: tests.cpp
